<resources>
    <string name="app_name">Makan Apa</string>
    <string name="tv_text_page1">Makan Apa Kita Hari Ini ?</string>
    <string name="btn_cari">Cari</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tag">Tag</string>
    <string name="bahan">Bahan</string>
    <string name="langkah">Langkah Memasak</string>
    <string name="resto">Tersedia di resto</string>
    <string name="openDrawer">open drawer</string>
    <string name="closeDrawer">close drawer</string>
    <string name="namaMakan">Burger</string>
    <string-array name="nav_menu">
        <item>Home</item>
        <item>Menu</item>
        <item>Exit</item>
    </string-array>
</resources>