<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deskripsi"
        android:textStyle="bold">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag"
            android:layout_weight="4"
            android:layout_margin="10dp">
        </TextView>
        <TextView
            android:id="@+id/tag_hasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag"
            android:layout_weight="1"
            android:layout_margin="10dp">
        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/bahan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bahan"
            android:layout_weight="4"
            android:layout_margin="10dp">
        </TextView>
        <TextView
            android:id="@+id/bahan_hasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/bahan">
        </TextView>
    </LinearLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/langkah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/langkah"
        android:textStyle="bold">
    </TextView>
    <TextView
        android:id="@+id/langkah_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/langkah"
        android:layout_margin="10dp">
    </TextView>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/resto"
            android:layout_weight="2"
            android:text="@string/resto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/resto_hasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resto">
        </TextView>
    </LinearLayout>

</LinearLayout>