<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/namaMakan"
                        android:textAlignment="center"
                        android:textColor="#1B1523"
                        android:textSize="20dp"
                        ></TextView>

                </LinearLayout>

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                    >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi"
                    android:textAlignment="center"
                    android:textColor="#1B1523"
                    android:textSize="15dp"
                    ></TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dekrips"
                        android:textAlignment="center"
                        android:textColor="#1B1523"
                        android:textSize="15dp"
                        >
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag"
                        android:textAlignment="center"
                        android:textColor="#1B1523"
                        android:textSize="15dp"
                        ></TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tags"
                        android:textAlignment="center"
                        android:textColor="#1B1523"
                        android:textSize="15dp"
                        >
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bahan"
                        android:textAlignment="center"
                        android:textColor="#1B1523"
                        android:textSize="15dp"
                        ></TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/bahans"
                        android:textAlignment="center"
                        android:textColor="#1B1523"
                        android:textSize="15dp"
                        >
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/langkah"
                        android:textColor="#1B1523"
                        android:textSize="15dp"
                        ></TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/langkahs"
                        android:textAlignment="center"
                        android:textColor="#1B1523"
                        android:textSize="50dp"

                        >
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resto"
                        android:textAlignment="center"
                        android:textColor="#1B1523"
                        android:textSize="15dp"
                        ></TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/restos"
                        android:textAlignment="center"
                        android:textColor="#1B1523"
                        android:textSize="15dp"
                        >
                    </TextView>

                </LinearLayout>

            </LinearLayout>
    </LinearLayout>
    
    
</androidx.constraintlayout.widget.ConstraintLayout>